tests/invalid/dict_magic_getitem_wrong_arg_count/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 2}
    v: int = d.__getitem__()
    print(v)


if __name__ == "__main__":
    run_case()
